--- a/README.org
+++ b/README.org
@@ -15,8 +15,7 @@
  - [[#特点][特点]]
  - [[#安装][安装]]
  - [[#设置中英文等宽字体][设置中英文等宽字体]]
-   - [[#方法一：][方法一：]]
-   - [[#方法二：][方法二：]]
+   - [[#设置：][设置：]]
    - [[#说明][说明]]
  - [[#中英文混排时的line-wrap][中英文混排时的line wrap]]
  - [[#keybindings][Keybindings]]
@@ -32,11 +31,12 @@
 - youdao-dictionary :: 有道词典
 - visual-fill-column :: 处理中英文混排时的断句（visual fill）
 
-和Chinese layer的不同之处主要有三点：
+和Chinese layer的不同之处主要有四点：
 
-- pangu-spacing默认关闭，并且默认使用软空格
-- 加入visual-fill-column处理中英文混排时的visual-line断句（代替adaptive-wrap）
-- 定义了一些keybindings
+- *采用了不同的函数设置中英文等宽（官方layer中的函数在Windows下有时候不管用，会调用fallback字体）*
+- *pangu-spacing默认关闭，并且默认使用软空格（以防止生成不需要的空格）*
+- *加入visual-fill-column处理中英文混排时的visual-line断句（代替adaptive-wrap）*
+- *额外定义了一些keybindings*
 
 * 安装
 安装非常简单，首先
@@ -66,25 +66,12 @@ git clone https://github.com/et2010/Han.git ~/.emacs.d/private/han
 #+end_src
 
 * 设置中英文等宽字体
-** 方法一：
+** 设置：
 在 =.spacemacs= 文件中添加以下设置：
 #+BEGIN_SRC emacs-lisp :export yes
   (defun dotspacemacs/user-config ()
     (spacemacs//set-monospaced-font "Source Code Pro" "Hiragino Sans GB W3" 14 16))
 #+END_SRC
-
-** 方法二：
-如果使用方法一汉字出现乱码，则可以采用方法二。在 =.spacemacs= 中添加以下代码来配置中文字体：
-#+BEGIN_SRC emacs-lisp :export yes
-  (defun dotspacemacs/user-config ()
-    (set-fontset-font "fontset-default"
-                      ;; "CJK Unified Ideographs" (han) U+4E00 - U+9FFF
-                      (cons (decode-char 'ucs #x4e00)
-                            (decode-char 'ucs #x9fff))
-                      "-*-Adobe Song Std-*-*-*-*-16-*-*-*-*-*-*-*"))
-;;                          字体族名             字号
-#+END_SRC
-英文字体用spacemacs自带函数配置。
 ** 说明
 当使用GUI的emacs时，默认的中文字符宽度一般不等于英文字符宽度的两倍，这样会导致用字符画的表格非常丑。解决办法是分别采用不同字号（高度）的中英文字体，使中文字符的宽度刚好等于英文字符宽度的两倍。通过试验发现不少常用的英文等宽字体字号设为14，中文字号设为16时可以满足等宽要求。字号这样配置时，以下列出的中英字体任意组合都可以满足等宽：
 
