Fix typos in README.org

--- a/README.org
+++ b/README.org
@@ -21,8 +21,8 @@
      - [[#sans-serif][Sans Serif]]
    - [[#英文变宽字体][英文变宽字体]]
  - [[#关于-org-文档的“版式”][关于 org 文档的“版式”]]
-     - [[#自动填充][自动填充]]
-     - [[#等宽和变宽字体][等宽和变宽字体]]
+   - [[#自动填充][自动填充]]
+   - [[#等宽和变宽字体][等宽和变宽字体]]
  - [[#keybindings][Keybindings]]
 
 * 特点
@@ -99,9 +99,9 @@ Han layer 对 orgmode 字体的处理：除了 table，block 等场合使用 fix
 
 * 关于 org 文档的“版式”
 Org 文档都是纯文本，但是在 org-mode 中显示时会有各种语法高亮以及对齐等，效果并不亚于 YGWYS 的 MS Word. 于是这里借用一下 doc 文档的术语“版式”。
-*** 自动填充
+** 自动填充
 用 =SPC t L= 设置 ~visual-line~ 的开启/关闭，同时会自动启动/关闭 ~visual-fill-column~.
-*** 等宽和变宽字体
+** 等宽和变宽字体
 除了 table 和 block 等之外的地方一律使用变宽字体，这样可以使版面更加紧凑。但是这个功能在 emacsclient 中无效，另外没有在 console emacs 中测试过。
 
 * Keybindings
